--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
         "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.3.1",
         "@ckeditor/ckeditor5-editor-classic": "^34.2.0",
         "@ckeditor/ckeditor5-essentials": "^34.2.0",
+        "@ckeditor/ckeditor5-find-and-replace": "^34.2.0",
         "@ckeditor/ckeditor5-font": "^34.2.0",
         "@ckeditor/ckeditor5-heading": "^34.2.0",
+        "@ckeditor/ckeditor5-horizontal-line": "^34.2.0",
+        "@ckeditor/ckeditor5-html-support": "^34.2.0",
         "@ckeditor/ckeditor5-image": "^34.2.0",
         "@ckeditor/ckeditor5-indent": "^34.2.0",
         "@ckeditor/ckeditor5-link": "^34.2.0",
